<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/padding_big"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_question"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/AppTheme.Button.Selectable"
        android:id="@+id/button_agreed"
        android:text="@string/agreed"
        android:backgroundTint="@color/selector_button_bg_green"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginStart="@dimen/padding_more_huge"
        android:layout_marginEnd="@dimen/padding_more_huge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button" />

    <Button
        style="@style/AppTheme.Button.Selectable"
        android:id="@+id/button_disagreed"
        android:text="@string/disagreed"
        android:backgroundTint="@color/selector_button_bg_red"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginStart="@dimen/padding_more_huge"
        android:layout_marginEnd="@dimen/padding_more_huge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button" />

    <Button
        style="@style/AppTheme.Button.Selectable"
        android:id="@+id/button_refrained"
        android:text="@string/refrained"
        android:backgroundTint="@color/selector_button_bg_blue"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginStart="@dimen/padding_more_huge"
        android:layout_marginEnd="@dimen/padding_more_huge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button" />
    
    <View
        android:background="@color/black"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

</LinearLayout>