<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:background="@color/blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_very_huge"
        android:paddingEnd="@dimen/padding_very_huge"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/AppTheme.ScreenTitle"
            android:id="@+id/text_user_name"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_very_huge"
            android:layout_marginBottom="@dimen/padding_very_huge"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <View
            android:background="@color/white"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <TextView
            android:text="@string/email"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_huge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_email"
            android:background="@drawable/bg_text_field"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button" />

        <TextView
            android:text="@string/phone"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_phone"
            android:background="@drawable/bg_text_field"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button" />

        <TextView
            android:text="@string/real_estate"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_real_estate"
            android:background="@drawable/bg_text_field"
            android:gravity="center"
            android:paddingStart="@dimen/padding_big"
            android:paddingEnd="@dimen/padding_big"
            android:lines="1"
            android:ellipsize="end"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button" />

        <TextView
            app:drawableEndCompat="@drawable/ic_add_square_green"
            android:id="@+id/text_add_real_estate"
            android:text="@string/add_real_estate"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/padding_small"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginStart="@dimen/padding_large"
            android:layout_marginEnd="@dimen/padding_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
